[metadata]
name = yaml2json
summary = Flips yaml input to json and vice versa
author = Clint Byrum
author-email = clint@fewbar.com
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programing Language :: Python
    Programing Language :: Python :: 2
    Programing Language :: Python :: 2.7
    Programing Language :: Python :: 2.6

[files]
scripts =
        yaml2json
extra_files =
        setup.py
