[metadata]
name = flamel
summary = Flips yaml input to json and vice versa
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
author = Clint Byrum
author-email = clint@fewbar.com
home-page = https://github.com/SpamapS/flamel
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3

[entry_points]
console_scripts =
    flamel = flamel:main
